syntax = "proto3";

package association;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.Association";

service AssociationContract {
    
    option (aelf.csharp_state) = "AElf.Contracts.Association.AssociationState";
    
    rpc ChangeOrganizationMember(OrganizationMemberList) returns (google.protobuf.Empty){
    }
}

message OrganizationMemberList {
    repeated aelf.Address organization_members = 1;
}

message OrganizationMemberChanged{
    option (aelf.is_event) = true;
    aelf.Address organization_address = 1;
    OrganizationMemberList organization_member_list = 2;
}